Revert "LIMO-92 - MatchListing divider league icons alignement fix"
This reverts commit 338cdf119ab2c4464bba1dd6c99869955ccd820b.

--- a/src/components/livescore/ls-divider/_ls-divider.scss
+++ b/src/components/livescore/ls-divider/_ls-divider.scss
@@ -61,7 +61,6 @@
 	color: $ls-divider-icon-color;
 	font-size: $ls-divider-icon-size;
 	vertical-align: middle;
-  	display: block;
 
 	.ls-divider__title & {
 		margin-right: 9px;
